[package]
name = "cracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = { version = "0.3.28", default-features = false }
tokio = { version = "1.32.0", features = [
  "macros",
  "process",
  "sync",
  "rt-multi-thread",
] }
